# experience_ml

./: .gitignore  Cargo.toml  LICENSE  README.md  build_rs.sh  build_rs_dev.sh  package.json
.github/workflows/: main.yml
assets/: exp_ml_bg.e90dbc40.wasm
frontend/: index.html  package.json  vite.config.ts
frontend/src/: app.ts  example.json  index.scss  plotInput.ts
frontend/types/: app.d.ts  plotInput.d.ts
src/: activations.rs  lib.rs  network.rs  utils.rs
