[package]
name = "exp_ml"
version = "0.1.0"
authors = ["SnowballSH <derek070211@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"

console_error_panic_hook = { version = "0.1.7", optional = true }

js-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
